--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul[role="navigation"] {
+  @apply flex gap-x-2 items-center justify-end w-fit;
+}
+
+ul[role="navigation"] li a {
+  @apply flex justify-center items-center w-10 h-10 drop-shadow rounded bg-white;
+}
+
+ul[role="navigation"] li.break a {
+  @apply bg-transparent drop-shadow-none cursor-default;
+}
+
+ul[role="navigation"] li.disabled a {
+  @apply bg-neutral-100 cursor-default text-neutral-400;
+}
+
+ul[role="navigation"] li:not(.selected):not(.break):not(.disabled):hover a {
+  @apply bg-black/20 cursor-pointer;
+}
+
+ul[role="navigation"] li.selected a {
+  @apply bg-black text-white;
 }
